# desk-open-pit-mining

./: README.md  pyproject.toml  requirements.txt
src/: autonomous-open-pit-mining.py  openpitmining.py  run.ps1
src/desk/: __main__.py
src/desk/analytics/: financial.py  metrics.py  plotting.py  reporting.py  wip_metrics.py
src/desk/blocks/: create_block.py  decide_block.py  dispose_block.py  process_block.py  sync_process_block.py
src/desk/config/: simulation_config.py
src/desk/core/: base_block.py  desk_resource.py  entity.py  event_tracer.py  model_variables.py  resource_reliability.py  simulation_model.py  simulation_observer.py
src/desk/distfit/: distfit.py
src/desk/stats/: factorial.py  replication.py
src/desk/utils/: helpers.py
src/desk/validation/: resource_validator.py  stability.py  warmup.py
src/desk/visualization/: interface.py
